using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings : MonoBehaviour
{
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isWallrunning = "isWallrunning";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string atk = "atk";
    internal static string canMove = "canMove";
    internal static string isAlive = "isAlive";
    internal static string isHit = "isHit";
    internal static string isShooting = "isShooting";
    internal static string hasTarget = "hasTarget";
}
